Update on Overleaf.

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -96,12 +96,17 @@
   year =         2023,
 }
 
-@article{amari2000natural,
-  author =       {Amari, Shun-Ichi},
-  year =         2000,
-  title =        {Natural Gradient Works Efficiently in Learning},
-  journal =      {Neural Computation},
+@article{amari1998natural,
+  title={Natural gradient works efficiently in learning},
+  author={Amari, Shun-Ichi},
+  journal={Neural computation},
+  volume={10},
+  number={2},
+  pages={251--276},
+  year={1998},
+  publisher={MIT Press}
 }
+
 
 @inproceedings{arora2018understanding,
   title =        {Understanding Deep Neural Networks with Rectified Linear
@@ -124,4 +129,13 @@
   title =        {New insights and perspectives on the natural gradient method},
   author =       {James Martens},
   year =         2020,
+}
+
+@inproceedings{muller2023achieving,
+  title={Achieving high accuracy with PINNs via energy natural gradient descent},
+  author={M{\"u}ller, Johannes and Zeinhofer, Marius},
+  booktitle={International Conference on Machine Learning},
+  pages={25471--25485},
+  year={2023},
+  organization={PMLR}
 }
