[ADD] Describe how to invert a Kronecker sum

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -143,6 +143,9 @@ Ideas:
 \input{sections/appendix.tex}
 \input{sections/laplacian_shallow_net.tex}
 
+\section{Inverting the Sum of Two Kronecker Matrices}
+\input{sections/inverse_sum_two_kronecker.tex}
+
 \end{document}
 
 %%% Local Variables:
