--- a/paper/sections/inverse_kronecker_sum.tex
+++ b/paper/sections/inverse_kronecker_sum.tex
@@ -3,13 +3,13 @@ When designing a Kronecker-factored curvature approximation, we have two choices
 \begin{enumerate}
 \item We can approximate each loss individually with a Kronecker product, i.e.
   \begin{align*}
-    \mK \coloneq \mA_1 \otimes \mA_2 + \mB_2 \otimes \mB_2
+    \mK \coloneqq \mA_1 \otimes \mA_2 + \mB_2 \otimes \mB_2
   \end{align*}
   where $\mA_{1,2}, \mB_{1,2}$ are invertible and positive definite.
 
 \item We can further approximate the above through a single Kronecker product, e.g.\,by summing,
   \begin{align*}
-    \mK' \coloneq (\mA_1 + \mB_1) \otimes (\mA_2 + \mB_2) \approx \mK\,.
+    \mK' \coloneqq (\mA_1 + \mB_1) \otimes (\mA_2 + \mB_2) \approx \mK\,.
   \end{align*}
 \end{enumerate}
 Eventually, we want to use their inverses.
