--- a/paper/sections/background_engd.tex
+++ b/paper/sections/background_engd.tex
@@ -1,4 +1,4 @@
-\subsection{Energy natural gradients}
+\subsection{Energy natural gradients (ENGs)}
 
 %\begin{itemize}
 %    \item recently, energy NGs have been proposed
